--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,11 +14,11 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="runQueryButton">
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>180</y>
+      <y>210</y>
       <width>82</width>
       <height>23</height>
      </rect>
@@ -27,11 +27,11 @@
      <string>Run</string>
     </property>
    </widget>
-   <widget class="QTextEdit" name="textEdit">
+   <widget class="QTextEdit" name="querytEdit">
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>110</y>
+      <y>140</y>
       <width>531</width>
       <height>61</height>
      </rect>
@@ -41,7 +41,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>80</y>
+      <y>110</y>
       <width>61</width>
       <height>20</height>
      </rect>
@@ -127,11 +127,24 @@
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>230</y>
+      <x>40</x>
+      <y>250</y>
       <width>571</width>
       <height>191</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>80</y>
+      <width>64</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Load:</string>
     </property>
    </widget>
   </widget>
@@ -141,7 +154,7 @@
      <x>0</x>
      <y>0</y>
      <width>676</width>
-     <height>20</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
