--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,154 +6,107 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>676</width>
-    <height>498</height>
+    <width>612</width>
+    <height>485</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="runQueryButton">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
-      <y>210</y>
-      <width>82</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Run</string>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="querytEdit">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
-      <y>140</y>
-      <width>531</width>
-      <height>61</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
-      <y>110</y>
-      <width>61</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Query:</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="searchButton">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
-      <y>20</y>
-      <width>131</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Search database</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit">
-    <property name="geometry">
-     <rect>
-      <x>190</x>
-      <y>20</y>
-      <width>421</width>
-      <height>21</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="loadDatabaseButton">
-    <property name="geometry">
-     <rect>
-      <x>190</x>
-      <y>80</y>
-      <width>421</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Load Database</string>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="delimeterBox">
-    <property name="geometry">
-     <rect>
-      <x>190</x>
-      <y>50</y>
-      <width>79</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <item>
-     <property name="text">
-      <string>;</string>
-     </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QLabel" name="WelcomeLabel">
+      <property name="text">
+       <string>CuDatSerach</string>
+      </property>
+     </widget>
     </item>
-    <item>
-     <property name="text">
-      <string>/</string>
-     </property>
+    <item row="0" column="1">
+     <widget class="QLabel" name="SWversion">
+      <property name="text">
+       <string>SW version</string>
+      </property>
+     </widget>
     </item>
-    <item>
-     <property name="text">
-      <string>,</string>
-     </property>
+    <item row="1" column="0">
+     <widget class="QPushButton" name="searchButton">
+      <property name="text">
+       <string>Search database</string>
+      </property>
+     </widget>
     </item>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
-      <y>50</y>
-      <width>81</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Delimeter:</string>
-    </property>
-   </widget>
-   <widget class="QTableWidget" name="tableWidget">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
-      <y>250</y>
-      <width>571</width>
-      <height>191</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
-      <y>80</y>
-      <width>64</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Load:</string>
-    </property>
-   </widget>
+    <item row="1" column="1">
+     <widget class="QLineEdit" name="lineEdit"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>Delimeter:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QComboBox" name="delimeterBox">
+      <item>
+       <property name="text">
+        <string>;</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>/</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>,</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>Load:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QPushButton" name="loadDatabaseButton">
+      <property name="text">
+       <string>Load Database</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Query:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0" colspan="2">
+     <widget class="QTextEdit" name="querytEdit"/>
+    </item>
+    <item row="6" column="0">
+     <widget class="QPushButton" name="runQueryButton">
+      <property name="text">
+       <string>Run</string>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="0" colspan="2">
+     <widget class="QTableWidget" name="tableWidget"/>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>676</width>
+     <width>612</width>
      <height>22</height>
     </rect>
    </property>
