--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,97 +6,196 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>612</width>
-    <height>485</height>
+    <width>836</width>
+    <height>691</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="QLabel" name="WelcomeLabel">
-      <property name="text">
-       <string>CuDatSerach</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QLabel" name="SWversion">
-      <property name="text">
-       <string>SW version</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QPushButton" name="searchButton">
-      <property name="text">
-       <string>Search database</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QLineEdit" name="lineEdit"/>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>Delimeter:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="1">
-     <widget class="QComboBox" name="delimeterBox">
+   <layout class="QVBoxLayout" name="verticalLayout_3">
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <property name="text">
-        <string>;</string>
-       </property>
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <item>
+           <widget class="QLabel" name="WelcomeLabel">
+            <property name="text">
+             <string>CuDatSerach</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>48</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QLabel" name="SWversion">
+            <property name="text">
+             <string>SW version</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <item>
+           <widget class="QLabel" name="RunTImeLabel">
+            <property name="text">
+             <string>Runtime:</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QLabel" name="runTimeResult">
+            <property name="text">
+             <string>RunTime Value</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+       </layout>
       </item>
       <item>
-       <property name="text">
-        <string>/</string>
-       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_6">
+        <item>
+         <widget class="QLabel" name="SearcTimeLabel">
+          <property name="text">
+           <string>Search Time:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>28</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QLabel" name="searchResult">
+          <property name="text">
+           <string>Search time value</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QPushButton" name="searchButton">
+        <property name="text">
+         <string>Search database</string>
+        </property>
+       </widget>
       </item>
       <item>
-       <property name="text">
-        <string>,</string>
-       </property>
+       <widget class="QLineEdit" name="lineEdit"/>
       </item>
-     </widget>
+     </layout>
     </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="label_3">
-      <property name="text">
-       <string>Load:</string>
-      </property>
-     </widget>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_4">
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Delimeter:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="delimeterBox">
+        <item>
+         <property name="text">
+          <string>;</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>/</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>,</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+     </layout>
     </item>
-    <item row="3" column="1">
-     <widget class="QPushButton" name="loadDatabaseButton">
-      <property name="text">
-       <string>Load Database</string>
-      </property>
-     </widget>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_5">
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Load:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="loadDatabaseButton">
+        <property name="text">
+         <string>Load Database</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
-    <item row="4" column="0">
+    <item>
      <widget class="QLabel" name="label">
       <property name="text">
        <string>Query:</string>
       </property>
      </widget>
     </item>
-    <item row="5" column="0" colspan="2">
+    <item>
      <widget class="QTextEdit" name="querytEdit"/>
     </item>
-    <item row="6" column="0">
+    <item>
      <widget class="QPushButton" name="runQueryButton">
       <property name="text">
        <string>Run</string>
       </property>
      </widget>
     </item>
-    <item row="7" column="0" colspan="2">
+    <item>
      <widget class="QTableWidget" name="tableWidget"/>
     </item>
    </layout>
@@ -106,7 +205,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>612</width>
+     <width>836</width>
      <height>22</height>
     </rect>
    </property>
